<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_viajes" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/promociones"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/fotos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Fotos" />
    </group>
</menu>