<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cinco"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="463dp"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textGrid"
                android:layout_width="386dp"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="15dp"
                android:text="@string/texto8"
                android:textColor="@android:color/black"
                android:textSize="34sp" />
        </RelativeLayout>


        <GridLayout
            android:id="@+id/mainGriddd"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="8"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:padding="20dp"
            android:rowCount="3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="19dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="260dp"
                    android:layout_height="346dp"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="242dp"
                        android:layout_height="174dp"
                        android:layout_gravity=""
                        android:src="@drawable/muerto" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="74dp"
                        android:text="@string/texto9"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="260dp"
                    android:layout_height="207dp"

                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="244dp"
                        android:layout_height="171dp"
                        android:layout_gravity="clip_vertical"
                        android:src="@drawable/turismo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/texto10"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>
</RelativeLayout>